--- a/package.json
+++ b/package.json
@@ -1,43 +1,34 @@
 {
-    "name": "Home",
-    "version": "1.0.0",
-    "private": true,
-    "homepage": "https://sairam1919.github.io/UserManagementApp/",
-    "dependencies": {
-        "antd": "^3.20.5",
-        "axios": "^0.19.2",
-        "babel": "^5.8.23",
-        "babel-loader": "^5.3.1",
-        "bootstrap": "^4.0.0-beta.2",
-        "node-windows": "^1.0.0-beta.5",
-        "moment": "^2.24.0",
-        "mssql": "^6.0.1",
-        "react": "^16.10.2",
-        "react-bootstrap": "^1.0.0-beta.16",
-        "react-dom": "^16.10.2",
-        "react-draggable": "^4.2.0",
-        "react-dropdown": "^1.6.4",
-        "react-modal": "^3.8.1",
-        "react-redux": "^7.1.1",
-        "react-router-dom": "^5.1.2",
-        "react-scripts": "^1.1.1",
-        "react-toggle-switch": "^3.0.4",
-        "react-tooltip": "^3.11.1",
-        "reactstrap": "^5.0.0",
-        "redux": "^4.0.4",
-        "redux-mock-store": "^1.5.1",
-        "redux-thunk": "^2.2.0"
-    },
-    "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test --env=jsdom --coverage",
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d build"
-    },
-    "devDependencies": {
-        "gh-pages": "^2.1.1",
-        "redux-devtools-extension": "^2.13.8",
-        "redux-logger": "^3.0.6"
-    }
+  "name": "UserManagement",
+  "version": "0.1.0",
+  "private": false,
+  "homepage": "/UserManagement",
+  "dependencies": {
+    "babel": "^5.8.23",
+    "babel-loader": "^5.3.1",
+    "bootstrap": "^4.0.0-beta.2",
+    "bootstrap-daterangepicker": "^3.0.3",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "moment": "^2.24.0",
+    "morgan": "^1.10.0",
+    "mssql": "^6.2.3",
+    "react": "^16.2.0",
+    "react-datepicker": "^2.11.0",
+    "react-dom": "^16.2.0",
+    "react-modal": "^3.8.1",
+    "react-scripts": "^1.1.1",
+    "react-toggle-switch": "^3.0.4"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom --coverage"
+  },
+  "devDependencies": {
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6"
+  }
 }
