--- a/package.json
+++ b/package.json
@@ -13,12 +13,19 @@
     "moment": "^2.24.0",
     "morgan": "^1.10.0",
     "mssql": "^6.2.3",
-    "react": "^16.2.0",
+    "react": "^16.13.1",
+    "history": "^4.10.1",
     "react-datepicker": "^2.11.0",
-    "react-dom": "^16.2.0",
+    "react-dom": "^16.13.1",
     "react-modal": "^3.8.1",
-    "react-scripts": "^1.1.1",
-    "react-toggle-switch": "^3.0.4"
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^1.1.5",
+    "react-toggle-switch": "^3.0.4",
+    "redux": "^4.0.5",
+    "react-redux": "^7.2.0",
+    "react-hot-loader": "^4.12.21",
+    "react-bootstrap-table-next": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
