--- a/package.json
+++ b/package.json
@@ -10,22 +10,24 @@
     "bootstrap-daterangepicker": "^3.0.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "history": "^4.10.1",
     "moment": "^2.24.0",
     "morgan": "^1.10.0",
     "mssql": "^6.2.3",
+    "mysql": "^2.18.1",
     "react": "^16.13.1",
-    "history": "^4.10.1",
+    "react-bootstrap-table-next": "^4.0.3",
     "react-datepicker": "^2.11.0",
     "react-dom": "^16.13.1",
+    "react-hot-loader": "^4.12.21",
     "react-modal": "^3.8.1",
+    "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^1.1.5",
     "react-toggle-switch": "^3.0.4",
     "redux": "^4.0.5",
-    "react-redux": "^7.2.0",
-    "react-hot-loader": "^4.12.21",
-    "react-bootstrap-table-next": "^4.0.3"
+    "websocket": "^1.0.32"
   },
   "scripts": {
     "start": "react-scripts start",
