--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "react-datepicker": "^2.11.0",
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.12.21",
+    "react-html5-camera-photo": "^1.5.4",
     "react-modal": "^3.8.1",
     "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^1.1.5",
     "react-toggle-switch": "^3.0.4",
+    "react-webcam": "^5.2.2",
     "redux": "^4.0.5"
   },
   "scripts": {
