--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^1.1.5",
+    "react-select": "^3.1.1",
     "react-toggle-switch": "^3.0.4",
     "react-webcam": "^5.2.2",
     "redux": "^4.0.5",
+    "uuid": "^8.3.1",
     "websocket": "^1.0.32"
   },
   "scripts": {
