--- a/server/config.json
+++ b/server/config.json
@@ -21,5 +21,19 @@
         "Tower6"
       ]
     }
+  ],
+  "Roles": [
+    {
+      "value": "admin",
+      "label": "Admin"
+    },
+    {
+      "value": "employee",
+      "label": "Employee"
+    },
+    {
+      "value": "visitor",
+      "label": "Visitor"
+    }
   ]
 }
