--- a/server/config.json
+++ b/server/config.json
@@ -1,39 +1,1 @@
-{
-  "Zones": [
-    {
-      "name": "Zone1",
-      "towers": [
-        "Tower1",
-        "Tower2"
-      ]
-    },
-    {
-      "name": "Zone2",
-      "towers": [
-        "Tower3",
-        "Tower4"
-      ]
-    },
-    {
-      "name": "Zone3",
-      "towers": [
-        "Tower5",
-        "Tower6"
-      ]
-    }
-  ],
-  "Roles": [
-    {
-      "value": "admin",
-      "label": "Admin"
-    },
-    {
-      "value": "employee",
-      "label": "Employee"
-    },
-    {
-      "value": "visitor",
-      "label": "Visitor"
-    }
-  ]
-}
+{"Zones":[{"name":"Zone1","towers":["Tower1","Tower2"]},{"name":"Zone2","towers":["Tower3","Tower4"]},{"name":"Zone3","towers":["Tower5","Tower6"]}],"Roles":[{"value":"admin","label":"Admin"},{"value":"employee","label":"Employee"},{"value":"visitor","label":"Visitor"}]}
