--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": false,
   "homepage": "/",
-  "proxy": "http://localhost:4000",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
@@ -34,7 +33,9 @@
     "react-webcam": "^5.2.2",
     "redux": "^4.0.5",
     "uuid": "^8.3.1",
-    "websocket": "^1.0.32"
+    "websocket": "^1.0.32",
+    "webpack": "^2.2.0",
+    "webpack-dev-server": "^1.14.1"
   },
   "scripts": {
     "start": "react-scripts start",
