New API's udpated for the integration with Devices

--- a/package.json
+++ b/package.json
@@ -1,51 +1,54 @@
 {
-  "name": "UserManagement",
-  "version": "0.1.0",
-  "private": false,
-  "homepage": "/",
-  "dependencies": {
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
-    "babel": "^5.8.23",
-    "babel-loader": "^5.3.1",
-    "bootstrap": "^4.0.0-beta.2",
-    "bootstrap-daterangepicker": "^3.0.3",
-    "cookie-parser": "^1.4.5",
-    "cors": "^2.8.5",
-    "history": "^4.10.1",
-    "moment": "^2.24.0",
-    "morgan": "^1.10.0",
-    "mssql": "^6.2.3",
-    "mysql": "^2.18.1",
-    "react": "^16.13.1",
-    "react-bootstrap-table-next": "^4.0.3",
-    "react-datepicker": "^2.11.0",
-    "react-dom": "^16.13.1",
-    "react-hot-loader": "^4.12.21",
-    "react-html5-camera-photo": "^1.5.4",
-    "react-modal": "^3.8.1",
-    "react-redux": "^7.2.0",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^1.1.5",
-    "react-select": "^3.1.1",
-    "react-toggle-switch": "^3.0.4",
-    "react-webcam": "^5.2.2",
-    "redux": "^4.0.5",
-    "uuid": "^8.3.1",
-    "websocket": "^1.0.32",
-    "webpack": "^2.2.0",
-    "webpack-dev-server": "^1.14.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom --coverage"
-  },
-  "devDependencies": {
-    "enzyme": "^3.2.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-logger": "^3.0.6"
-  }
+    "name": "UserManagement",
+    "version": "0.1.0",
+    "private": false,
+    "homepage": "/",
+    "proxy": "http://localhost:4000",
+    "dependencies": {
+        "@material-ui/core": "^4.11.0",
+        "@material-ui/icons": "^4.9.1",
+        "babel": "^5.8.23",
+        "babel-loader": "^5.3.1",
+        "bootstrap": "^4.0.0-beta.2",
+        "bootstrap-daterangepicker": "^3.0.3",
+        "cookie-parser": "^1.4.5",
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
+        "history": "^4.10.1",
+        "moment": "^2.24.0",
+        "morgan": "^1.10.0",
+        "mssql": "^6.2.3",
+        "mysql": "^2.18.1",
+        "nodemon": "^2.0.6",
+        "react": "^16.13.1",
+        "react-bootstrap-table-next": "^4.0.3",
+        "react-datepicker": "^2.11.0",
+        "react-dom": "^16.13.1",
+        "react-hot-loader": "^4.12.21",
+        "react-html5-camera-photo": "^1.5.4",
+        "react-modal": "^3.8.1",
+        "react-redux": "^7.2.0",
+        "react-router": "^5.2.0",
+        "react-router-dom": "^5.2.0",
+        "react-scripts": "^1.1.5",
+        "react-select": "^3.1.1",
+        "react-toggle-switch": "^3.0.4",
+        "react-webcam": "^5.2.2",
+        "redux": "^4.0.5",
+        "uuid": "^8.3.1",
+        "webpack": "^2.2.0",
+        "webpack-dev-server": "^1.14.1",
+        "websocket": "^1.0.32"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --env=jsdom --coverage"
+    },
+    "devDependencies": {
+        "enzyme": "^3.2.0",
+        "enzyme-adapter-react-16": "^1.1.1",
+        "redux-devtools-extension": "^2.13.8",
+        "redux-logger": "^3.0.6"
+    }
 }
