--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "history": "^4.10.1",
+        "html-to-image": "^1.3.20",
         "moment": "^2.24.0",
         "morgan": "^1.10.0",
         "mssql": "^6.2.3",
@@ -27,6 +28,8 @@
         "react-hot-loader": "^4.12.21",
         "react-html5-camera-photo": "^1.5.4",
         "react-modal": "^3.8.1",
+        "react-qr-code": "^1.0.5",
+        "react-qrcode": "^0.2.5",
         "react-redux": "^7.2.0",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
