--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "mysql": "^2.18.1",
         "nodemon": "^2.0.6",
         "react": "^16.13.1",
+        "react-barcode": "^1.4.0",
         "react-bootstrap-table-next": "^4.0.3",
         "react-datepicker": "^2.11.0",
         "react-dom": "^16.13.1",
