Deploy script and deployment folder udpated

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "morgan": "^1.10.0",
         "mssql": "^6.2.3",
         "mysql": "^2.18.1",
+        "node-windows": "^1.0.0-beta.5",
         "nodemon": "^2.0.6",
         "react": "^16.13.1",
         "react-barcode": "^1.4.0",
