--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "dependencies": {
         "@material-ui/core": "^4.11.0",
         "@material-ui/icons": "^4.9.1",
+        "@material-ui/pickers": "^3.2.10",
         "babel": "^5.8.23",
         "babel-loader": "^5.3.1",
-        "bootstrap": "^4.0.0-beta.2",
+        "bootstrap": "^4.5.3",
         "bootstrap-daterangepicker": "^3.0.3",
         "cookie-parser": "^1.4.5",
         "cors": "^2.8.5",
@@ -32,7 +33,7 @@
         "react-modal": "^3.8.1",
         "react-qr-code": "^1.0.5",
         "react-qrcode": "^0.2.5",
-        "react-redux": "^7.2.0",
+        "react-redux": "^7.2.2",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "^1.1.5",
